2010-10-7 Lorenzo Natale <lorenzo.natale@iit.it>
	main/conf/iCubHelpers.cmake icub_app_install(FILES...) now skip directories
	bug fix: wrong behavior with cmake 2.6.0 about creation of directories

2010-10-6 Lorenzo Natale <lorenzo.natale@iit.it>
	main/conf/iCubHelpers.cmake icub_app_install support case 
	in which no DESTINATION is given.

2010-10-6 Lorenzo Natale <lorenzo.natale@iit.it>
	add rules to install manager.py, added target python-scripts
	that manually copies manager.py to the build directory
    
2010-10-6 Lorenzo Natale <lorenzo.natale@iit.it>
	app/default/scripts/manager.py
	main/app/default/scripts/manager.py
	bug fixes on timeout, basic handling of linux/windows
	differences, minor version on windows is 2.6

2010-10-6 Lorenzo Natale <lorenzo.natale@iit.it>
	applications no longer in the ALL group

2010-10-01 Lorenzo Natale <lorenzo.natale@iit.it>
	code for applications, default is now true, removed guards added iCubGenova01

2010-09-24 Lorenzo Natale <lorenzo.natale@iit.it>
	src/core/iCubInterface/RobotInterfaceRemap.cpp:
	config file now accepts no parts


2010-09-24 Lorenzo Natale <lorenzo.natale@iit.it>
		./main/src/core/iCubInterface:
		./main/src/libraries/skinprototype:
		modified to handle rpc for IAnalog interface.

2010-09-23 Lorenzo Natale <lorenzo.natale@iit.it>
		./main/src/libraries/icubmod/CMakeLists.txt:
		inclusion of YarpPlugin.cmake, does not work with installed yarp
	
2010-09-15 Lorenzo Natale <lorenzo.natale@iit.it>
        * general cleanup, moved old build (mostly everything in src to 
	backup/oldBuild, including some cmake files that were in the 
	root.
	
2010-08-19 Alessandro Scalzo <alessandro.scalzo@iit.it>
	* iCub/main/src/libraries/icubmod/dragonfly2/*
	* iCub/main/src/tools/frameGrabberGui2/include/FrameGrabberGUIControl2.h

	Added image offset control to dragonfly2 library.

2010-06-10 Alessandro Scalzo <alessandro.scalzo@iit.it>
	* iCub/main/src/libraries/iCubVis added (vision library)