@@ -37,17 +37,18 @@ set(EXPORT_CONFIG_FILE icub-export-build.cmake)
 set(ICUB_MODULE_PATH ${CMAKE_BINARY_DIR}/conf)
 set(ICUB_LINK_FLAGS ${IPOPT_LINK_FLAGS})
 set(BUILD_CONFIG_TEMPLATE "conf/template/icub-config-build-tree.cmake.in")
+file(APPEND ${CMAKE_BINARY_DIR}/${EXPORT_INCLUDE_FILE} "This file is automatically generated, see conf/iCubExportBuildTree.cmake\n")
 file(APPEND ${CMAKE_BINARY_DIR}/${EXPORT_INCLUDE_FILE} "###################\n")
 file(APPEND ${CMAKE_BINARY_DIR}/${EXPORT_INCLUDE_FILE} "# List of include directories for exported targets\n\n")
 set(include_dirs "")
 foreach (t ${ICUB_TARGETS})  
-  get_property(target_INCLUDE_DIRS TARGET ${t} PROPERTY INCLUDE_DIRS)
-  #some targets do not export include directory
-  if (target_INCLUDE_DIRS)
-    file(APPEND ${CMAKE_BINARY_DIR}/${EXPORT_INCLUDE_FILE} "set(${t}_INCLUDE_DIRS ${target_INCLUDE_DIRS} CACHE STRING \"include dir for target ${t}\")\n")
-    set(include_dirs ${include_dirs} ${target_INCLUDE_DIRS})
-  endif()    
- 
+get_property(target_INCLUDE_DIRS TARGET ${t} PROPERTY INCLUDE_DIRS)
+#some targets do not export include directory
+if (target_INCLUDE_DIRS)
+	file(APPEND ${CMAKE_BINARY_DIR}/${EXPORT_INCLUDE_FILE} "set(${t}_INCLUDE_DIRS ${target_INCLUDE_DIRS} CACHE STRING \"include dir for target ${t}\")\n")
+	set(include_dirs ${include_dirs} ${target_INCLUDE_DIRS})
+endif()    
+
 endforeach(t)
 
 #message(STATUS "Pruning duplicaed entries from include directories ${include_dirs}")
@@ -56,4 +57,4 @@ list(REMOVE_DUPLICATES include_dirs)
 file(APPEND ${CMAKE_BINARY_DIR}/${EXPORT_INCLUDE_FILE} "set(ICUB_INCLUDE_DIRS \"${include_dirs}\" CACHE STRING \"list of include directories, all exported targets\")\n")
 
 CONFIGURE_FILE(${CMAKE_SOURCE_DIR}/${BUILD_CONFIG_TEMPLATE}
-  ${CMAKE_BINARY_DIR}/icub-config.cmake @ONLY IMMEDIATE)
+${CMAKE_BINARY_DIR}/icub-config.cmake @ONLY IMMEDIATE)
