@@ -192,9 +192,25 @@ ENDMACRO(PARSE_ARGUMENTS)
 macro(icub_app target)
     set(dummy ${CMAKE_BINARY_DIR}/f-${target})
     set(dapp ${ICUB_DESTINATION_APP}/app/${target})
-    add_custom_command(OUTPUT ${dummy}
-                    COMMAND ${CMAKE_COMMAND} -E make_directory ${dapp}
-                    COMMENT "Creating directory ${target}")
+	
+	set(cmakefile ${CMAKE_BINARY_DIR}/app-${target}.cmake)
+	file(WRITE ${cmakefile} "###### This file is automatically generated by CMake.\n")
+	file(APPEND ${cmakefile} "## see macro icub_app defined in conf/iCubHelpers.cmake\n\n")
+	
+	file(APPEND ${cmakefile} "execute_process(COMMAND \"\${CMAKE_COMMAND}\" -E make_directory ${dapp})\n")
+	
+    add_custom_target(app-${target} DEPENDS ${dummy})
+    
+    icub_set_property(GLOBAL APPEND PROPERTY ICUB_APPLICATIONS app-${target})
+    icub_set_property(GLOBAL APPEND PROPERTY ICUB_APPLICATIONS_FILES ${dummy})
+	
+	add_custom_command(OUTPUT ${dummy}
+					   COMMAND ${CMAKE_COMMAND} -P ${cmakefile}
+					   COMMENT "Setting up app-${target}")
+					
+#    add_custom_command(OUTPUT ${dummy}
+#                    COMMAND ${CMAKE_COMMAND} -E make_directory ${dapp}
+#                    COMMENT "Creating directory ${target}")
 endmacro(icub_app)
 
 ##
@@ -221,39 +237,54 @@ macro(icub_app_install target)
   set(files ${${target}_FILES})
   set(destination ${${target}_DESTINATION})
   
+  set(cmakefile ${CMAKE_BINARY_DIR}/app-${target}.cmake)
+  
   if (destination)
-      set(dapp "${ICUB_DESTINATION_APP}/app/${target}/${destination}")
-    
-      add_custom_command(OUTPUT ${dummy}
-        COMMAND ${CMAKE_COMMAND} -E make_directory ${dapp}
-        COMMENT "Creating directory ${dapp}"
-        APPEND)
+	set(dapp "${ICUB_DESTINATION_APP}/app/${target}/${destination}")
+	file(APPEND ${cmakefile} "execute_process(COMMAND \"\${CMAKE_COMMAND}\" -E make_directory ${dapp})\n")
+
+ #     add_custom_command(OUTPUT ${dummy}
+ #       COMMAND ${CMAKE_COMMAND} -E make_directory ${dapp}
+ #       COMMENT "Creating directory ${dapp}"
+ #       APPEND)
   else (destination)
       set(dapp "${ICUB_DESTINATION_APP}/app/${target}")
   endif(destination)
   
   #message(STATUS "${CMAKE_COMMAND} -E make_directory ${dapp}/${destination}")
 
-
-  foreach(f ${files})
-    if (NOT IS_DIRECTORY ${f})
-      set(command2 ${CMAKE_COMMAND} -E copy ${f} ${dapp})
-      add_custom_command(OUTPUT ${dummy}
-    COMMAND ${command2}
-    COMMENT "Copy ${f} to ${dapp}"
-    APPEND)		
-    endif()
-  endforeach(f ${files})					
+  file(APPEND ${cmakefile} "\nset(files ${files})\n")
+  file(APPEND ${cmakefile} "foreach(f \${files})\n")
+  file(APPEND ${cmakefile} "\tget_filename_component(fname \${f} NAME)\n")
+  file(APPEND ${cmakefile} "\tif (NOT IS_DIRECTORY \${f})\n")
+  file(APPEND ${cmakefile} "\t\tif (NOT EXISTS ${dapp}/\${fname})\n")
+  file(APPEND ${cmakefile} "\t\t\texecute_process(COMMAND \"\${CMAKE_COMMAND}\" -E copy \${f} ${dapp})\n")
+  file(APPEND ${cmakefile} "\t\telse()\n")
+  file(APPEND ${cmakefile} "\t\t\texecute_process(COMMAND \"\${CMAKE_COMMAND}\" -E compare_files \${f} ${dapp}/\${fname} RESULT_VARIABLE test_not_successful OUTPUT_QUIET ERROR_QUIET)\n")
+  file(APPEND ${cmakefile} "\t\t\tif ( test_not_successful )\n")
+  file(APPEND ${cmakefile} "\t\t\t\tmessage(\"Preserving locally modified file: ${dapp}/\${fname}\")\n")
+  file(APPEND ${cmakefile} "\t\t\t\tmessage(\"--> saving new file to: ${dapp}/\${fname}.new\")\n")
+  file(APPEND ${cmakefile} "\t\t\t\texecute_process(COMMAND \"\${CMAKE_COMMAND}\" -E copy \${f} ${dapp}/\${fname}.new)\n")
+  file(APPEND ${cmakefile} "\t\t\tendif()\n")
+  file(APPEND ${cmakefile} "\t\tendif()\n")
+  file(APPEND ${cmakefile} "\tendif()\n")
+  file(APPEND ${cmakefile} "endforeach(f \${files})\n\n")
+  
+#  foreach(f ${files})
+#    if (NOT IS_DIRECTORY ${f})
+#      set(command2 ${CMAKE_COMMAND} -E copy ${f} ${dapp})
+#      add_custom_command(OUTPUT ${dummy}
+#    COMMAND ${command2}
+#    COMMENT "Copy ${f} to ${dapp}"
+#    APPEND)		
+#    endif()
+#  endforeach(f ${files})					
 
 
 endmacro(icub_app_install)
 
 macro(icub_add_target target)
-    set(dummy ${CMAKE_BINARY_DIR}/f-${target})
-    add_custom_target(app-${target} DEPENDS ${dummy})
-    
-    icub_set_property(GLOBAL APPEND PROPERTY ICUB_APPLICATIONS app-${target})
-    icub_set_property(GLOBAL APPEND PROPERTY ICUB_APPLICATIONS_FILES ${dummy})
+## obsolete...
 endmacro(icub_add_target)
 
 ### From yarp.
@@ -278,8 +309,3 @@ MACRO(icub_set_property _global _property _append varname)
     set_property(GLOBAL PROPERTY ${varname} ${ARGN})
   endif (_icub_append_chk)
 ENDMACRO(icub_set_property)
-
-
-
-
-
